cleanup use of LinkedList..